# sdk-ros-examples

./: README.md
sdk_examples_ros_services/: CMakeLists.txt  package.xml
sdk_examples_ros_services/listener_service/: CMakeLists.txt  listener_service_default_config.pbtxt  listener_service_main.cc  minimal_subscriber.cc  minimal_subscriber.h  ros_config.proto
sdk_examples_ros_services_py/sdk-ros-files/resources/: Dockerfile.service
sdk_examples_ros_services_py/sdk-ros-files/scripts/: build_bundle_docker.sh
sdk_examples_ros_services_py/talker_pkg/: CMakeLists.txt  package.xml  ros_config.proto  talker_pkg.manifest.textproto  talker_pkg_default_config.pbtxt
sdk_examples_ros_services_py/talker_pkg/scripts/: minimal_publisher
sdk_examples_ros_services_py/talker_pkg/talker_pkg/: ros_config_pb2.py
sdk_examples_ros_skills/: CMakeLists.txt  package.xml
sdk_examples_ros_skills/src/talker_skill/: CMakeLists.txt  minimal_publisher.cc  minimal_publisher.h  talker_skill.cc  talker_skill.h  talker_skill.manifest.textproto  talker_skill.proto
