<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>talker_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="youruser@todo.todo">youruser</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sdk-ros</exec_depend>
  <exec_depend>python3-grpcio</exec_depend>
  <exec_depend>python3-protobuf</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>intrinsic_sdk_cmake</build_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
